frontend&backend: merge login password limit to global auth limit
